--- a/Stupendous Styles Challenge/Views/SchedulePage.xaml
+++ b/Stupendous Styles Challenge/Views/SchedulePage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Stupendous_Styles_Challenge.Pages.CoffeePage"
+    x:Class="Stupendous_Styles_Challenge.Views.SchedulePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Stupendous_Styles_Challenge.Pages"
